[package]
name = "easy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = [ "string" ] }
lazy_static = "1.4.0"
regex = "1.7.0"

[dev-dependencies]
tempfile = "3.3.0"
