[package]
name = "easy-cli"
version = "1.0.0"
authors = ["Toby Grasl <herblet@knowledge42.com>"]
edition = "2021"
description = "Builds CLI tools from a set of scripts."
homepage = "https://github.com/herblet/easy-cli"
license = "MIT"
repository = "https://github.com/herblet/easy-cli"

[dependencies]
clap = { version = "4", features = [ "string" ] }
clap_complete = "4"
indoc = "1.0.7"
lazy_static = "1.4"
regex = "1.7"
stringreader = "0.1.1"

[dev-dependencies]
tempfile = "3.3"
