[package]
name = "easy-cli"
version = "1.0.1"
authors = ["Toby Grasl <herblet@knowledge42.com>"]
edition = "2021"
description = "Builds CLI tools from a set of scripts."
homepage = "https://github.com/herblet/easy-cli"
license = "MIT"
repository = "https://github.com/herblet/easy-cli"

[dependencies]
clap = { version = "4", features = ["string"] }
clap_complete = "4"
lazy_static = "1.4"
regex = "1.10"
log = "0.4.21"
env_logger = "0.11"
nom = "7.1"
indoc = "2.0"
[dev-dependencies]
tempfile = "3.3"
